trunk/Archive2/7f/bcc8ff0d1e743c/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:2:8: error: 'unique_lock' in namespace 'std' does not name a type
 inline std::unique_lock<std::mutex> lock_if(std::mutex& mutex, Pred&& predicate)
        ^
